--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <title>Piškvorky</title>
 </head>
 <body>
-  <h1>Piškvorky</h1>
+  <div class="uvod">
+    <div class="hlavicka">
+      <img class="obrazek" style width="400px" src="uvodni.jpg" alt="Piškvorky">
+    </div>
+    <div class="text">
+      <h1 class="nazev" >Piškvorky</h1>
+      <p>Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
+
+    </div>
+    <div class="tlacitka">
+     <a class="pravidla" href="#">Pravidla</a>
+     <a class="zacit" href="#">Začít hrát</a>
+    </div>
+  </div>
+  
 </body>
 </html>
