--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <p>Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
 
     </div>
-    <div class="tlacitka">
-     <a class="pravidla" href="#">Pravidla</a>
-     <a class="zacit" href="#">Začít hrát</a>
-    </div>
+    <ul class="tlacitka">
+     <li class="pravidla"><a href="#">Pravidla</a></li>
+     <li class="zacit"><a href="#">Začít hrát</a></li>
+    </ul>
   </div>
   
 </body>
