--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </div>
     <div class="text">
       <h1 class="nazev" >Piškvorky</h1>
-      <p>Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
+      <p class="texty">Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
 
     </div>
     <ul class="tlacitka">
-     <li class="pravidla"><a href="#">Pravidla</a></li>
+     <li class="pravidla"><a href="pravidla.html">Pravidla</a></li>
      <li class="zacit"><a href="#">Začít hrát</a></li>
     </ul>
   </div>
