úpravy mobilního zobrazení

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="uvod">
     <div class="hlavicka">
-      <img class="obrazek" style width="400px" src="uvodni.jpg" alt="Piškvorky">
+      <img class="obrazek" src="uvodni.jpg" alt="Piškvorky">
     </div>
     <div class="text">
       <h1 class="nazev" >Piškvorky</h1>
