--- a/pravidla.html
+++ b/pravidla.html
@@ -57,7 +57,7 @@
     </figure>
     </div>
     <ul class="tlacitka">
-     <li class="pravidla"><a href="index.html">Úvodní stránka</a></li>
+     <li class="uvodni"><a href="index.html">Úvodní stránka</a></li>
      <li class="zacit"><a href="#">Začít hrát</a></li>
     </ul>
   </div>
