--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     </div>
     <ul class="tlacitka">
-     <li class="pravidla"><a href="pravidla.html">Pravidla</a></li>
-     <li class="zacit"><a href="#">Začít hrát</a></li>
+     <li class="tlacitko pravidla"><a href="pravidla.html">Pravidla</a></li>
+     <li class="tlacitko zacit"><a href="#">Začít hrát</a></li>
     </ul>
   </div>
   
