stránka hra, úprava seznamu pravidel

--- a/pravidla.html
+++ b/pravidla.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styly.css" />
-    <title>Document</title>
+    <title>Pravidla</title>
   </head>
   <body>
     <div class="uvod">
@@ -119,7 +119,7 @@
       </div>
       <ul class="tlacitka">
         <li class="tlacitko uvodni"><a href="index.html">Úvodní stránka</a></li>
-        <li class="tlacitko zacit"><a href="#">Začít hrát</a></li>
+        <li class="tlacitko zacit"><a href="hra.html">Začít hrát</a></li>
       </ul>
     </div>
   </body>
