--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <ul class="tlacitka">
      <li class="tlacitko pravidla"><a href="pravidla.html">Pravidla</a></li>
-     <li class="tlacitko zacit"><a href="#">Začít hrát</a></li>
+     <li class="tlacitko zacit"><a href="hra.html">Začít hrát</a></li>
     </ul>
   </div>
   
