--- a/hra.html
+++ b/hra.html
@@ -14,14 +14,16 @@
     <div class="stranka">
       <h1 class="nazev">Piškvorky</h1>
       <div class="navigace">
-        <p class="hraje texty">hraje: <span class="circle"></span></p>
+        <div>
+          <p class="hraje texty">hraje: <span class="circle"></span></p>
+        </div>
         <div class="buttony">
-        <a class="domu" href="index.html"
-          ><img class="home" src="images/home.svg" alt="home"
-        /></a>
-        <a class="znovu" href="hra.html"
-          ><img class="again" src="images/restart.svg" alt="restart"
-        /></a>
+          <a class="domu" href="index.html"
+            ><img class="home" src="images/home.svg" alt="home"
+          /></a>
+          <a class="znovu" href="hra.html"
+            ><img class="again" src="images/restart.svg" alt="restart"
+          /></a>
         </div>
       </div>
       <div class="pole">
@@ -127,5 +129,6 @@
         <button class="policko"></button>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
