--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styly.css">
-  <title>Piškvorky</title>
-</head>
-<body>
-  <div class="uvod">
-    <div class="hlavicka">
-      <img class="obrazek" src="uvodni.jpg" alt="Piškvorky">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styly.css" />
+    <title>Piškvorky</title>
+  </head>
+  <body>
+    <div class="uvod">
+      <div class="hlavicka">
+        <img class="obrazek" src="uvodni.jpg" alt="Piškvorky" />
+      </div>
+      <div class="text">
+        <h1 class="nazev">Piškvorky</h1>
+        <p class="texty">
+          Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
+          se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
+          skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
+          čtverečkovaný papír. Přejeme vám hodně zábavy!
+        </p>
+      </div>
+      <ul class="tlacitka">
+        <li class="tlacitko pravidla"><a href="pravidla.html">Pravidla</a></li>
+        <li class="tlacitko zacit"><a href="hra.html">Začít hrát</a></li>
+      </ul>
     </div>
-    <div class="text">
-      <h1 class="nazev" >Piškvorky</h1>
-      <p class="texty">Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
-
-    </div>
-    <ul class="tlacitka">
-     <li class="tlacitko pravidla"><a href="pravidla.html">Pravidla</a></li>
-     <li class="tlacitko zacit"><a href="hra.html">Začít hrát</a></li>
-    </ul>
-  </div>
-  
-</body>
+  </body>
 </html>
