JS konečně funguje

--- a/hra.html
+++ b/hra.html
@@ -14,8 +14,12 @@
     <div class="stranka">
       <h1 class="nazev">Piškvorky</h1>
       <div class="navigace">
-        <div>
-          <p class="hraje texty">hraje: <span class="circle"></span></p>
+        <div class="hrac">
+          <p class="hraje texty">
+            hraje:
+            <!-- <span id="player" class="circle"></span> -->
+          </p>
+          <img class="znak" src="images/circle.svg" alt="Kolečko" />
         </div>
         <div class="buttony">
           <a class="domu" href="index.html"
